--- a/charactersunite/themes/characterunite/css/cu_override_style.css
+++ b/charactersunite/themes/characterunite/css/cu_override_style.css
@@ -793,3 +793,20 @@ div.share li {
   color: #222;
 }
 /**** HUB End ***/
+
+/*** Space between issues start ***/
+.spaceBetweenIssues {
+
+}
+.sbiGalleryView {
+
+}
+.sbiGalleryViewRow .colMain {
+width: 688px;
+margin-left: 3px;
+margin-right: 11px;
+}
+.sbiGalleryViewRow .colSide {
+width: 248px;
+}
+/*** Space between issues end ***/
